-fix loading specific file -retrieve 64-bit gps-coordinates